# consore-services

./: CODEOWNERS  README.md  pyproject.toml
consore_services/controle_codage_pmsi/: README.md  main.py  plugin_curie_pmsi.py
consoretoolbox/: consore.py
creds/: example_consore.json
tests/tests_consoretoolbox/: __init__.py  test_method.py
tests/tests_controle_codage/: __init__.py  test_output.py
tests/tests_controle_codage/output/: keywords.xlsx  keywords_output.xlsx
tests/tests_controle_codage/referentiels/: keywords_output.xlsx
tests/tests_controle_codage/referentiels/mock_data/: sejours.csv  sentences.csv
util/: compare_util.py  creds_util.py  files_util.py  logger_util.py  mysql_util.py  util.py
