[tool.poetry]
name = "consoretoolbox"
version = "1.0.0"
description = "outil d'interaction avec l'index consore "
authors = ["Institut  Curie Data Factory "]
readme = "README.md"
packages = [{include = "src/consoretoolbox"}]



[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pre-commit = "2.9.2"
python = "3.9.7"
unittest2 = "1.1.0"
pandas="1.5.0"
sqlalchemy="1.4.28"
pytest = "7.1.2"
pytest-html = "3.1.1"
pytest-cov = "3.0.0"
pytest-clarity = "1.0.1"
mock = "5.1.0"
pyodbc = "4.0.32"
duckdb = "0.8.1"
unidecode = "1.3.6"
freezegun = "1.2.2"
mysqlclient = "2.2.0"
urllib3 = "2.0.4"
elasticsearch = "6.8.2"
elasticsearch-dsl = "6.4.0"
openpyxl="3.1.2"
fsspec="2023.9.0"